--- a/OpenRobertaParent/pom.xml
+++ b/OpenRobertaParent/pom.xml
@@ -281,6 +281,21 @@
                 <artifactId>javax.mail</artifactId>
                 <version>1.5.1</version>
             </dependency>
+            <dependency>
+                <groupId>lego.nxt</groupId>
+                <artifactId>pccomm</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sf.bluecove</groupId>
+                <artifactId>bluecove</artifactId>
+                <version>2.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sf.bluecove</groupId>
+                <artifactId>bluecove-gpl</artifactId>
+                <version>2.1.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
