#49 copy crosscompiler-ev3 script to OpenRobertaServer project

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@
 Resources/resources/*.jar
 Resources/updateResources/*.jar
 OpenRobertaRuntime/userProjects/*
+OpenRobertaServer/userProjects/*
 **/phantomjsdriver.log
