--- a/OpenRobertaServer/src/main/resources/openRoberta.properties
+++ b/OpenRobertaServer/src/main/resources/openRoberta.properties
@@ -8,9 +8,9 @@ validversionrange.From = ${validversionrange.From}
 validversionrange.To = ${validversionrange.To}
 
 # directory to store (temporarily) the generated user programs
-crosscompiler.basedir    = ../OpenRobertaRuntime/userProjects/
+crosscompiler.basedir    = ./userProjects/
 # the ant script that calls the cross compiler and the tool creating the jar containing the user program
-crosscompiler.build.xml  = ../OpenRobertaRuntime/crosscompiler-ev3-build.xml
+crosscompiler.build.xml  = ./crosscompiler-ev3-build.xml
 
 # the URL of the database is retrieved from the parent pom
 hibernate.connection.url = ${hibernate.connection.url}
