--- a/OpenRobertaServer/db/openroberta-db.properties
+++ b/OpenRobertaServer/db/openroberta-db.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.2
-#Tue May 03 17:07:00 CEST 2016
+#Fri May 20 10:09:18 CEST 2016
 version=2.3.2
-modified=yes
+modified=no
