--- a/JavaForLejos/.classpath
+++ b/JavaForLejos/.classpath
@@ -5,5 +5,14 @@
 	<classpathentry kind="con" path="org.lejos.ev3.ldt.LEJOS_EV3_LIBRARY_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/OpenRobertaRuntime-1.3.2-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/OpenRobertaShared-1.3.2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/development/.m2/repository/de/fhg/iais/roberta/ev3classes/0.9.0-beta/ev3classes-0.9.0-beta.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="de.fhg.iais.roberta"/>
+			<attribute name="maven.artifactId" value="ev3classes"/>
+			<attribute name="maven.version" value="0.9.0-beta"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
