#128 added sound sensor (now connected with Ev3's gyro), removed ternary and checked if-else, added functions to make the program's structure clear: function for adding constants and a function for adding functions

--- a/OpenRobertaServer/db/openroberta-db.properties
+++ b/OpenRobertaServer/db/openroberta-db.properties
@@ -1,12 +1,4 @@
 #HSQL Database Engine 2.3.2
-<<<<<<< b17b3a17301bcdd79ef2313dbf00c738be2ed028
-<<<<<<< 3b2bb506e6c9793d591062ee2491f329c766ce22
-#Fri May 20 10:09:18 CEST 2016
-=======
-#Wed May 11 12:15:17 CEST 2016
->>>>>>> #126 add guided tour, add messages from blockly, add files from enjoyHint
-=======
-#Wed May 25 13:01:08 CEST 2016
->>>>>>> #128 minor changes
+#Wed May 25 14:40:39 CEST 2016
 version=2.3.2
-modified=yes
+modified=no
