--- a/OpenRobertaServer/db/openroberta-db.properties
+++ b/OpenRobertaServer/db/openroberta-db.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.2
-#Wed Jun 08 15:47:52 CEST 2016
+#Thu Jun 09 16:28:23 CEST 2016
 version=2.3.2
-modified=yes
+modified=no
