--- a/OpenRobertaServer/db/openroberta-db.properties
+++ b/OpenRobertaServer/db/openroberta-db.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.2
-#Thu Jun 09 16:28:23 CEST 2016
+#Fri Jun 10 12:45:22 CEST 2016
 version=2.3.2
-modified=no
+modified=yes
