--- a/OpenRobertaServer/db/openroberta-db.properties
+++ b/OpenRobertaServer/db/openroberta-db.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.2
-#Fri Jun 10 14:06:20 CEST 2016
+#Fri Jun 10 18:05:32 CEST 2016
 version=2.3.2
-modified=no
+modified=yes
