--- a/OpenRobertaServer/src/main/resources/openRoberta.properties
+++ b/OpenRobertaServer/src/main/resources/openRoberta.properties
@@ -10,7 +10,7 @@ validversionrange.To = ${validversionrange.To}
 # directory to store (temporarily) the generated user programs
 crosscompiler.basedir    = ./userProjects/
 # the ant script that calls the cross compiler and the tool creating the jar containing the user program
-crosscompiler.build.xml  = ./crosscompiler-ev3-build.xml
+crosscompiler.build.xml  = ../OpenRobertaServer/src/main/resources/nbc
 
 # the URL of the database is retrieved from the parent pom
 hibernate.connection.url = ${hibernate.connection.url}
