--- a/OpenRobertaServer/db/openroberta-db.properties
+++ b/OpenRobertaServer/db/openroberta-db.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.2
-#Thu Jun 16 13:40:52 CEST 2016
+#Thu Jun 16 16:13:50 CEST 2016
 version=2.3.2
-modified=yes
+modified=no
