--- a/OpenRobertaServer/db/openroberta-db.properties
+++ b/OpenRobertaServer/db/openroberta-db.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.2
-#Thu Jun 16 16:13:50 CEST 2016
+#Fri Jun 17 11:10:23 CEST 2016
 version=2.3.2
-modified=no
+modified=yes
